@@ -23,6 +23,7 @@ group :development do
 end
 
 group :system_tests do
+  gem 'net-ssh', '~> 5.0'
   gem 'beaker'
   gem 'beaker-rspec'
   gem 'simp-beaker-helpers', ENV.fetch('SIMP_BEAKER_HELPERS_VERSION', ['>= 1.17.0', '< 2.0.0'])
